# simplesi

./: README.md  main.py  pyproject.toml  setup.py  todo.md
simplesi/: __init__.py  default.json  dimensions.py  environment.py  physical_helper_functions.py  todo.md
simplesi/environments/: US_customary.json  _settings.json  default.json  electrical.json  imperial.json  molecular_biology.json  preferred_units.json  proba.json  settings.json  structural.json  thermal.json
tests/: doctests.py  test_definitions.json  test_dimensions.py  test_environment.py  test_physical.py  test_physical_nonsi.py
