[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplesi"
version = "1.0.0"
description = "A simple SI unit module for engineering calculations."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[tool.setuptools.package-data]
simplesi = ["environments/**/*"]

[project.urls]
"Homepage" = "https://github.com/jkbgbr/simplesi"
"Bug Tracker" = "https://github.com/jkbgbr/simplesi/issues"